# ostrov-vezenia-mvp

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: launch.json
admin/: index.html  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  alembic.ini  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: admin_batches.py  admin_company.py  admin_customs.py  admin_groups.py  admin_health.py  admin_orders.py  admin_pochta.py  admin_shops.py  admin_tnved.py  admin_version.py  auth.py  delivery.py  orders.py  router.py  tracking.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  limiter.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  batch.py  company_settings.py  customs_declaration.py  grouping_settings.py  operator.py  order.py  order_status_history.py  shipment_group.py  shop.py  tn_ved_code.py  tracking_event.py
backend/app/schemas/: auth.py  batch.py  common.py  company_settings.py  customs_declaration.py  delivery.py  order.py  shop.py  tn_ved.py
backend/app/scripts/: create_admin.py
backend/app/services/: audit.py  cbr_rates.py  customs_declaration.py  customs_export.py  delivery.py  grouping_optimizer.py  hub_router.py  order.py  pochta.py  webhook.py
backend/app/workers/: celery_app.py  tasks_grouping.py  tasks_webhook.py
backend/scripts/: import_tn_ved.py
backend/static/: shop-emulator.html
backend/tests/: test_emulator.py
data/: tn_ved_tws.xlsx
docs/: API.md  ARCHITECTURE.md  BUSINESS_PROCESSES.md  CUSTOMS_EXPERIMENT.md  DATABASE.md  DEPLOY.md  ISSUES.md  PROJECT_AUDIT_2026-02-20.md  SECURITY_AUDIT_PLAN.md
nginx/: nginx.conf  prod.conf
scripts/: backup.sh  (+2 more)
(+55 files in other folders)
